# fdtd-practice-2

./: .gitignore  CMakeLists.txt  constants.h  fdtd_1d_maxwell.cpp  fdtd_1d_maxwell.h  mater.cpp  mater.h  output.cpp  output.h  plot.gnuplot  plot.py  pulse.cpp  pulse.h  report.md  report_header.tex  rfourier.cpp  rfourier.h  run.py  set_mem.cpp  set_mem.h  slab.cpp
